feat: Introduce new OAuth Provider
