# scdms-backend/src/api/oauth.ts
@@ -7,10 +7,13 @@ import cors from "cors";
 
 const router = express.Router();
 const redirect =
-  // "http://scdms-server.simplifiedcoding.org/oauth/discord/finalize";
   "http://localhost:3000/oauth/discord/finalize";
+// "http://scmds-server.simplifiedcoding.org/oauth/discord/finalize";
 
 const states = new cache({ stdTTL: 60 * 12, checkperiod: 90 });
+const providers = {
+  "scdms": "https://scdms.simplifiedcoding.org/oauth/discord/finalize"
+}
 
 router.use(cors());
 router.get("/discord/clientid", (req: Request, res: Response) => {
@@ -19,20 +22,15 @@ router.get("/discord/clientid", (req: Request, res: Response) => {
     .json({ status: true, clientid: process.env.OAUTH_DISCORD_ID });
 });
 
-router.post("/discord/state", (req: Request, res: Response) => {
-  if (!req.body.state) {
-    res
-      .status(404)
-      .json({ status: false, msg: "The state body parameter wasn not found!" });
-  }
-
-  states.set(req.body.state, "");
-  res.status(200).json({ status: true });
-});
+router.post("/token/:token", (req: Request, res: Response) => {
+  if (!states.has(req.params.token))
+    return res.status(404).json({ status: false, msg: "Token not found!" })
+  res.status(200).json({ status: true, jwt: states.take(req.params.token) })
+})
 
 router.get("/discord/request", (req: Request, res: Response) => {
   const state = uuidv4();
-  states.set(state, "");
+  states.set(state, req.query.provider || undefined);
 
   res.redirect(
     `https://discord.com/oauth2/authorize?response_type=code&client_id=${process.env.OAUTH_DISCORD_ID
@@ -58,6 +56,10 @@ router.get("/discord/finalize", async (req: Request, res: Response) => {
     return;
   }
 
+  const provider = states.take(String(req.query.state)) as string
+  if (provider == undefined || providers[provider] == undefined)
+    return res.status(404).json({ status: false, msg: "The provider was not found in the local database" })
+
   const accessToken = await axios
     .post(
       "https://discord.com/api/oauth2/token",
@@ -76,14 +78,14 @@ router.get("/discord/finalize", async (req: Request, res: Response) => {
         },
       },
     )
-    .then((d) => d.data.access_token)
+    .then((data) => data.data.access_token)
     .catch((e) => console.log(e));
 
   const discordUser = await axios
     .get("https://discord.com/api/users/@me", {
       headers: { Authorization: "Bearer " + accessToken },
     })
-    .then((d) => d.data);
+    .then((data) => data.data);
 
   let user = await getUser(discordUser.id);
   if (!user) {
@@ -94,12 +96,9 @@ router.get("/discord/finalize", async (req: Request, res: Response) => {
     });
   }
 
-  res.status(200).json({
-    status: true,
-    state: String(req.query.state),
-    admin: user.ADMIN,
-    jwt: signUserJWT(user),
-  });
+  const token = uuidv4();
+  states.set(token, signUserJWT(user));
+  res.status(301).redirect(`${providers[provider]}?admin=${user.ADMIN}&jwt_token=${token}`)
 });
 
 export default router;
