# scdms-backend/src/assets/OpenAPI.json
@@ -28,84 +28,68 @@
     }
   ],
   "paths": {
-    "/oauth/discord/request": {
-      "get": {
-        "operationId": "get_oauth_discord_request",
-        "summary": "Get a discord OAuth redirect",
-        "description": "Redirects to discord OAuth authorize URL.",
-        "tags": ["oauth"]
-      }
-    },
-    "/oauth/discord/clientid": {
-      "get": {
-        "operationId": "get_oauth_discord_clientid",
-        "summary": "Gets the discord OAuth App Client ID",
-        "description": "Returns the discord OAuth App Client ID to allow external authentication",
+    "/oauth/token/:token": {
+      "post": {
+        "operationId": "post_oauth_token_token",
+        "summary": "Request a JWT with a token",
+        "description": "Requests a JWT from the returned token after succesful OAuth",
         "tags": ["oauth"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "token",
+            "description": "The OAuth token",
+            "schema": { "type": "string" }
+          }
+        ],
         "responses": {
-          "200": {
-            "description": "OAuth Discord Client ID",
+          "404": {
+            "description": "Token not found",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "clientid"],
+                  "required": ["status", "msg"],
                   "properties": {
-                    "status": {
-                      "type": "boolean",
-                      "default": true
-                    },
-                    "clientid": {
-                      "type": "string"
-                    }
+                    "status": { "type": "boolean", "default": "false" },
+                    "msg": { "type": "string", "default": "Token not found!" }
                   }
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/oauth/discord/state": {
-      "post": {
-        "operationId": "post_oauth_discord_state",
-        "summary": "POSTs to the server a state",
-        "description": "Appends to the states object a new state ID to allow external authentication",
-        "tags": ["oauth"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["state"],
-                "properties": {
-                  "state": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
+          },
           "200": {
             "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status"],
+                  "required": ["status", "jwt"],
                   "properties": {
-                    "status": {
-                      "type": "boolean",
-                      "default": true
-                    }
+                    "status": { "type": "boolean", "default": "true" },
+                    "jwt": { "type": "string" }
                   }
                 }
               }
             }
           }
         }
+      }
+    },
+    "/oauth/discord/request": {
+      "get": {
+        "operationId": "get_oauth_discord_request",
+        "summary": "Get a discord OAuth redirect",
+        "description": "Redirects to discord OAuth authorize URL.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "provider",
+            "description": "The oauth provider to redirect to after authentication",
+            "schema": { "type": "string" }
+          }
+        ],
+        "tags": ["oauth"]
       }
     },
     "/oauth/discord/finalize": {
@@ -432,6 +416,15 @@
         "summary": "Gets a certificate status",
         "description": "Looks up the certificate and returns it status",
         "tags": ["certs"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Found",
@@ -487,6 +480,15 @@
         "summary": "Revokes a certificate",
         "description": "Looks up the certificate and revokes it",
         "tags": ["certs"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "security": [
           {
             "jwt": []
@@ -562,6 +564,15 @@
           }
         ],
         "tags": ["certs"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -626,6 +637,15 @@
         "summary": "Get's a courses ID from its slug",
         "description": "Returns the pocketbase course ID that has the course slug",
         "tags": ["course", "pocketbase"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -703,6 +723,117 @@
                     "msg": {
                       "type": "string",
                       "default": "The courses array in the body to migrate was not found."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/lessons/migrate": {
+      "post": {
+        "operationId": "get_lessons_migrate",
+        "summary": "Migrate a $course.json file containing lessons to pocketbase",
+        "description": "Checks all courses in the provided course.json file as the request body, if the course is not found then it is inserted.",
+        "tags": ["lesson", "pocketbase", "migrate"],
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "description": "The $course.json file contents",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["data"],
+                "properties": {
+                  "data": {
+                    "type": "array"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "in": "query",
+            "name": "course",
+            "description": "The course slug that the JSON file belongs to",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status"],
+                  "properties": {
+                    "status": { "type": "boolean", "default": "true" }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Request Body Data Missing",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "msg"],
+                  "properties": {
+                    "status": { "type": "boolean", "default": "false" },
+                    "msg": {
+                      "type": "string",
+                      "default": "The courses array in the body to migrate was not found."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/lessons/:slug": {
+      "get": {
+        "operationId": "get_lessons_slug",
+        "summary": "Get's all of the lessons of a specific course",
+        "description": "Returns the pocketbase lessons that are attached to the course (via the course slug paramaeter)",
+        "tags": ["lesson", "pocketbase"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "id"],
+                  "properties": {
+                    "status": { "type": "boolean", "default": "true" },
+                    "id": {
+                      "type": "array",
+                      "description": "The lessons"
                     }
                   }
                 }
